# autoschematic-verification-suite

./: .gitignore  Cargo.toml  autoschematic.ron  run_suite.sh  run_suite_local.sh
autoschematic-connector-scoreboard-dummy/: Cargo.toml
autoschematic-connector-scoreboard-dummy/src/: addr.rs  connector.rs  main.rs  op.rs  resource.rs
autoschematic-testbench/: Cargo.toml
autoschematic-testbench/src/: cmd.rs  main.rs
autoschematic-verification-core/: Cargo.toml
autoschematic-verification-core/src/: crosscheck.rs  lib.rs  sequence.rs  tx.rs
sequences/: apply.ron  import.ron  plan.ron  task_exec.ron  unbundle.ron
testbench/equivalence/grpc/.bundle/scoreboard/: bundle.1.out.bun.ron
testbench/equivalence/grpc/scoreboard/: bundle.1.out
testbench/equivalence/src/: bundle.ron
testbench/equivalence/tarpc/scoreboard/: bundle.ron
