[package]
name = "autoschematic-connector-scoreboard-dummy"
version = "0.10.0"
edition = "2024"
license = "MIT"
description = "For testing use only. A simple connector that writes its operations to a scoreboard, a la UVM."

[dependencies]
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
anyhow = "1.0.95"
async-trait = "0.1.86"
autoschematic-verification-core = { path = "../autoschematic-verification-core", version = "0.10.0", features = [
] }
autoschematic-core = { path = "../../autoschematic/autoschematic-core", version = "0.10.0", features = [
    "grpc",
] }
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
urlencoding = "2.1.3"
serde_json = "1.0.138"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
reqwest = { version = "0.12.15", features = ["json"] }
colored = "3.0.0"
redb = "3.0.0"
chrono = "0.4.41"
rand = "0.9.2"
rand_chacha = "0.9.0"
