cargo-features = ["edition2024"]
[package]
name = "autoschematic-verification-core"
description = "Core shared verification behaviour for Autoschematic."
license = "MIT"
version = "0.9.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
colored = "3.0.0"
diff-struct = "0.5.3"
itertools = "0.14.0"
redb = "3.0.0"
serde = "1.0.219"
serde_json = "1.0.142"
